--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -992,7 +992,7 @@
 
 
 
-+PART[SEP_22_SHIP_CREW]:NEEDS[kOS]
++PART[SEP_22_SHIP_CREW]:NEEDS[kOS]:AFTER[kOS]
 {
 	@name = SEP_22_SHIP_CREW_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
