--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -3,7 +3,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_CLUSTER]:NEEDS[kOS]
++PART[SEP_22_BOOSTER_CLUSTER]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_BOOSTER_CLUSTER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -316,7 +316,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_CORE]:NEEDS[kOS]
++PART[SEP_22_BOOSTER_CORE]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_BOOSTER_CORE_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -488,7 +488,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_GRIDFIN]:NEEDS[kOS]
++PART[SEP_22_BOOSTER_GRIDFIN]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_BOOSTER_GRIDFIN_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -503,7 +503,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_INTER]:NEEDS[kOS]
++PART[SEP_22_BOOSTER_INTER]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_BOOSTER_INTER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -516,7 +516,7 @@
 
 
 
-+PART[SEP_22_RAPTOR_VAC]:NEEDS[kOS]
++PART[SEP_22_RAPTOR_VAC]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_RAPTOR_VAC_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -646,7 +646,7 @@
 
 
 
-+PART[SEP_22_RAPTOR2_SL_RC]:NEEDS[kOS]
++PART[SEP_22_RAPTOR2_SL_RC]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_RAPTOR2_SL_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -778,7 +778,7 @@
 
 
 
-+PART[SEP_22_SHIP_AFT_LEFT]:NEEDS[kOS]
++PART[SEP_22_SHIP_AFT_LEFT]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_AFT_LEFT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -786,7 +786,7 @@
 
 
 
-+PART[SEP_22_SHIP_AFT_RIGHT]:NEEDS[kOS]
++PART[SEP_22_SHIP_AFT_RIGHT]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_AFT_RIGHT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -794,7 +794,7 @@
 
 
 
-+PART[SEP_22_SHIP_BODY]:NEEDS[kOS]
++PART[SEP_22_SHIP_BODY]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_BODY_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -928,7 +928,7 @@
 
 
 
-+PART[SEP_22_SHIP_CARGO]:NEEDS[kOS]
++PART[SEP_22_SHIP_CARGO]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_CARGO_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -992,7 +992,7 @@
 
 
 
-+PART[SEP_22_SHIP_CREW]:NEEDS[kOS]:AFTER[kOS]
++PART[SEP_22_SHIP_CREW]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_CREW_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1056,7 +1056,7 @@
 
 
 
-+PART[SEP_22_SHIP_FWD_LEFT]:NEEDS[kOS]
++PART[SEP_22_SHIP_FWD_LEFT]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_FWD_LEFT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1064,7 +1064,7 @@
 
 
 
-+PART[SEP_22_SHIP_FWD_RIGHT]:NEEDS[kOS]
++PART[SEP_22_SHIP_FWD_RIGHT]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_FWD_RIGHT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1072,7 +1072,7 @@
 
 
 
-+PART[SEP_22_SHIP_HEADER]:NEEDS[kOS]
++PART[SEP_22_SHIP_HEADER]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_HEADER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1112,7 +1112,7 @@
 
 
 
-+PART[SEP_22_SHIP_TANKER]:NEEDS[kOS]
++PART[SEP_22_SHIP_TANKER]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_TANKER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1215,7 +1215,7 @@
 
 
 
-+PART[SLE_SS_OLM]:NEEDS[kOS]
++PART[SLE_SS_OLM]:NEEDS[kOS]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLM_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1239,7 +1239,7 @@
 
 
 
-+PART[SLE_SS_OLIT_Core]:NEEDS[kOS]
++PART[SLE_SS_OLIT_Core]:NEEDS[kOS]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLIT_Core_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1247,7 +1247,7 @@
 
 
 
-+PART[SLE_SS_OLIT_Top]:NEEDS[kOS]
++PART[SLE_SS_OLIT_Top]:NEEDS[kOS]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLIT_Top_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1255,7 +1255,7 @@
 
 
 
-+PART[SLE_SS_OLIT_Base]:NEEDS[kOS]
++PART[SLE_SS_OLIT_Base]:NEEDS[kOS]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLIT_Base_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1263,7 +1263,7 @@
 
 
 
-+PART[SLE_SS_OLIT_MZ]:NEEDS[kOS]
++PART[SLE_SS_OLIT_MZ]:NEEDS[kOS]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLIT_MZ_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1271,7 +1271,7 @@
 
 
 
-@PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipLaunchExpansion]
 {
 	@mass *= 4
 	%rescaleFactor = 1.6
@@ -1343,11 +1343,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 55
 }
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 60
 	@rescaleFactor = 1
@@ -1355,11 +1355,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 35
 }
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 120
 	@rescaleFactor = 1
@@ -1367,11 +1367,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 3
 	@rescaleFactor = 1
@@ -1379,11 +1379,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 6
 }
-@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 8
 	@rescaleFactor = 1
@@ -1391,11 +1391,11 @@
 
 
 
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -1403,11 +1403,11 @@
 
 
 
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 0.75
 }
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1.5
 	@rescaleFactor = 1
@@ -1415,11 +1415,11 @@
 
 
 
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1.25
 }
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 3.25
 	@rescaleFactor = 1
@@ -1427,11 +1427,11 @@
 
 
 
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 3
 	@rescaleFactor = 1
@@ -1439,12 +1439,12 @@
 
 
 
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 20
 	CoMOffset = 0.0, -1.5, 0.0
 }
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 75
 	CoMOffset = 0.0, -2.4, 0.0
@@ -1462,12 +1462,12 @@
 
 
 
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 10
 	CoMOffset = 0.0, -2, 0.0
 }
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 20
 	CoMOffset = 0.0, -3.2, 0.0
@@ -1485,12 +1485,12 @@
 
 
 
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 15
 	CoMOffset = 0.0, -2, 0.0
 }
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 25
 	%CoMOffset = 0.0, -3.2, 0.0
@@ -1518,12 +1518,12 @@
 
 
 
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 10
 	CoMOffset = 0.0, -2, 0.0
 }
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 20
 	CoMOffset = 0.0, -3.2, 0.0
@@ -1541,11 +1541,11 @@
 
 
 
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!RealSolarSystem]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,RealSolarSystem]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -1560,106 +1560,3 @@
 	%thermalMassModifier = 1.0
 }
 
-
-
---------------------Waterfall---------------------
-
-
-
-@PART[SEP_22_SHIP_BODY_KOS|SEP_22_SHIP_TANKER_KOS|SEP_22_SHIP_CARGO_KOS|SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,Waterfall]
-{
-	@EFFECTS
-	{
-		running
-		{
-			AUDIO_MULTI_POOL
-			{
-				channel = Ship
-				transformName = RCS
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
-				volume = 1.0 0.1
-				pitch = 1.0
-				loop = true
-			}
-		}
-	}
-	MODULE
-	{
-		name = ModuleWaterfallFX
-		moduleID = rcsFX
-
-		CONTROLLER
-		{
-			name = atmosphereDepth
-			linkedTo = atmosphere_density
-		}
-		CONTROLLER
-		{
-			name = rcs
-			linkedTo = rcs
-		}
-		TEMPLATE:NEEDS[!RealSolarSystem]
-		{
-			templateName = SEP-SP-RCS
-			overrideParentTransform = RCS
-			position = 0,0,0
-			rotation = 0, 0, 180
-			scale = 1.0, 1.0, 1.0
-		}
-		TEMPLATE:NEEDS[RealSolarSystem]
-		{
-			templateName = SEP-SP-RCS
-			overrideParentTransform = RCS
-			position = 0,0,0
-			rotation = 0, 0, 180
-			scale = 1.6, 1.6, 1.6
-		}
-	}
-	EFFECTS
-	{
-		running_vent
-		{
-			AUDIO_MULTI_POOL
-			{
-				channel = Ship
-				transformName = VentTransform
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 1.0 0.1
-				pitch = 1.0
-				loop = true
-			}
-		}
-	}
-	MODULE
-	{
-		name = ModuleWaterfallFX
-		moduleID = ventFX
-
-		CONTROLLER
-		{
-			name = thrust
-			linkedTo = thrust
-			engineID = Vents
-		}
-		TEMPLATE:NEEDS[!RealSolarSystem]
-		{
-			templateName = sep-vent-jet
-			overrideParentTransform = VentTransform
-			position = 0,0.0005,0
-			rotation = 0, 0, 180
-			scale = 2.1, 6.5, 2.1
-		}
-		TEMPLATE:NEEDS[RealSolarSystem]
-		{
-			templateName = sep-vent-jet
-			overrideParentTransform = VentTransform
-			position = 0,0.0005,0
-			rotation = 0, 0, 180
-			scale = 3.36, 10.4, 3.36
-		}
-	}
-}
