--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -3,7 +3,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_CLUSTER]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_BOOSTER_CLUSTER]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_BOOSTER_CLUSTER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -316,7 +316,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_CORE]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_BOOSTER_CORE]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_BOOSTER_CORE_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -488,7 +488,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_GRIDFIN]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_BOOSTER_GRIDFIN]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_BOOSTER_GRIDFIN_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -503,7 +503,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_INTER]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_BOOSTER_INTER]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_BOOSTER_INTER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -516,7 +516,7 @@
 
 
 
-+PART[SEP_22_RAPTOR_VAC]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_RAPTOR_VAC]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_RAPTOR_VAC_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -646,7 +646,7 @@
 
 
 
-+PART[SEP_22_RAPTOR2_SL_RC]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_RAPTOR2_SL_RC]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_RAPTOR2_SL_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -778,7 +778,7 @@
 
 
 
-+PART[SEP_22_SHIP_AFT_LEFT]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_AFT_LEFT]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_AFT_LEFT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -786,7 +786,7 @@
 
 
 
-+PART[SEP_22_SHIP_AFT_RIGHT]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_AFT_RIGHT]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_AFT_RIGHT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -794,7 +794,7 @@
 
 
 
-+PART[SEP_22_SHIP_BODY]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_BODY]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_BODY_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -928,7 +928,7 @@
 
 
 
-+PART[SEP_22_SHIP_CARGO]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_CARGO]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_CARGO_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -992,7 +992,7 @@
 
 
 
-+PART[SEP_22_SHIP_CREW]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_CREW]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_CREW_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1056,7 +1056,7 @@
 
 
 
-+PART[SEP_22_SHIP_FWD_LEFT]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_FWD_LEFT]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_FWD_LEFT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1064,7 +1064,7 @@
 
 
 
-+PART[SEP_22_SHIP_FWD_RIGHT]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_FWD_RIGHT]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_FWD_RIGHT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1072,7 +1072,7 @@
 
 
 
-+PART[SEP_22_SHIP_HEADER]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_HEADER]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_HEADER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1112,7 +1112,7 @@
 
 
 
-+PART[SEP_22_SHIP_TANKER]:NEEDS[kOS]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_TANKER]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_TANKER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1215,7 +1215,7 @@
 
 
 
-+PART[SLE_SS_OLM]:NEEDS[kOS]:AFTER[StarshipLaunchExpansion]
++PART[SLE_SS_OLM]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLM_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1239,7 +1239,7 @@
 
 
 
-+PART[SLE_SS_OLIT_Core]:NEEDS[kOS]:AFTER[StarshipLaunchExpansion]
++PART[SLE_SS_OLIT_Core]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLIT_Core_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1247,7 +1247,7 @@
 
 
 
-+PART[SLE_SS_OLIT_Top]:NEEDS[kOS]:AFTER[StarshipLaunchExpansion]
++PART[SLE_SS_OLIT_Top]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLIT_Top_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1255,7 +1255,7 @@
 
 
 
-+PART[SLE_SS_OLIT_Base]:NEEDS[kOS]:AFTER[StarshipLaunchExpansion]
++PART[SLE_SS_OLIT_Base]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLIT_Base_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1263,7 +1263,7 @@
 
 
 
-+PART[SLE_SS_OLIT_MZ]:NEEDS[kOS]:AFTER[StarshipLaunchExpansion]
++PART[SLE_SS_OLIT_MZ]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLIT_MZ_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1271,7 +1271,7 @@
 
 
 
-@PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipLaunchExpansion]
+@PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipLaunchExpansion]
 {
 	@mass *= 4
 	%rescaleFactor = 1.6
@@ -1343,11 +1343,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 55
 }
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 60
 	@rescaleFactor = 1
@@ -1355,11 +1355,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 35
 }
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 120
 	@rescaleFactor = 1
@@ -1367,11 +1367,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 3
 	@rescaleFactor = 1
@@ -1379,11 +1379,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 6
 }
-@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 8
 	@rescaleFactor = 1
@@ -1391,11 +1391,11 @@
 
 
 
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -1403,11 +1403,11 @@
 
 
 
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 0.75
 }
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1.5
 	@rescaleFactor = 1
@@ -1415,11 +1415,11 @@
 
 
 
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1.25
 }
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 3.25
 	@rescaleFactor = 1
@@ -1427,11 +1427,11 @@
 
 
 
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 3
 	@rescaleFactor = 1
@@ -1439,12 +1439,12 @@
 
 
 
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 20
 	CoMOffset = 0.0, -1.5, 0.0
 }
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 75
 	CoMOffset = 0.0, -2.4, 0.0
@@ -1462,12 +1462,12 @@
 
 
 
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 10
 	CoMOffset = 0.0, -2, 0.0
 }
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 20
 	CoMOffset = 0.0, -3.2, 0.0
@@ -1485,26 +1485,16 @@
 
 
 
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 15
 	CoMOffset = 0.0, -2, 0.0
 }
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 25
 	%CoMOffset = 0.0, -3.2, 0.0
-	%rescaleFactor = 1
-
-	@INTERNAL,0
-	{
-		@rescaleFactor = 1.6
-		@scale = 1.6,1.6,1.6
-		@MODEL,0
-		{
-			@scale = 1.6,1.6,1.6
-		}
-	}
+	@rescaleFactor = 1
 
 	%maxTemp = 873.15
 	%skinMaxTemp = 2973.15
@@ -1518,12 +1508,12 @@
 
 
 
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 10
 	CoMOffset = 0.0, -2, 0.0
 }
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 20
 	CoMOffset = 0.0, -3.2, 0.0
@@ -1541,11 +1531,11 @@
 
 
 
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -1560,3 +1550,14 @@
 	%thermalMassModifier = 1.0
 }
 
+@INTERNAL[SEP_CREW_IVA_*]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+{
+	@rescaleFactor = 1
+	@scale = 1.6,1.6,1.6
+	@PROP,*
+	{
+		@position[0,,] *= 1.6
+		@position[1,,] *= 1.6
+		@position[2,,] *= 1.6
+	}
+}
