--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -1561,3 +1561,18 @@
 		@position[2,,] *= 1.6
 	}
 }
+
+
+
+-------------------Localization------------------------
+
+
+Localization
+{
+	en-us
+	{
+		#autoLOC_6006035 = Activate Pitch Controls
+		#autoLOC_6006038 = Activate Yaw Control
+		#autoLOC_6006041 = Activate Roll Control
+	}
+}
