--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -1573,6 +1573,7 @@ Localization
 	{
 		#autoLOC_6006035 = Activate Pitch Controls
 		#autoLOC_6006038 = Activate Yaw Control
+		#autoLOC_6006039 = Deactivate Yaw Control
 		#autoLOC_6006041 = Activate Roll Control
 	}
 }
