--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -8,7 +8,15 @@
 	@name = SEP_22_BOOSTER_CLUSTER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
 
-	-MODULE[ModuleSEPEngineGUI],* {}
+	@maximum_drag = 1
+	@minimum_drag = 0.2
+	@angularDrag = 0.5
+
+	-MODULE[ModuleSEPEngineGUI]:NEEDS[!RealSolarSystem],* {}
+	@MODULE[ModuleSEPEngineGUI]:NEEDS[RealSolarSystem],*
+	{
+		@SingleEngineThrust = 2340
+	}
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPEngineSwitch]],* {}
 
 	MODULE
@@ -92,28 +100,17 @@
 
 	@MODULE[ModuleEnginesFX]:HAS[#engineID[AllEngines]]:NEEDS[!RealSolarSystem]
 	{
-		@maxThrust = 10443
-	}
-	@MODULE[ModuleEnginesFX]:HAS[#engineID[AllEngines]]:NEEDS[RealSolarSystem]
-	{
-		@maxThrust = 77218
+		@maxThrust = 10100
 	}
 
 	@MODULE[ModuleEnginesFX]:HAS[#engineID[MiddleInner]]:NEEDS[!RealSolarSystem]
 	{
-		@maxThrust = 4114
+		@maxThrust = 5125
 	}
-	@MODULE[ModuleEnginesFX]:HAS[#engineID[MiddleInner]]:NEEDS[RealSolarSystem]
-	{
-		@maxThrust = 30419
-	}
+
 	@MODULE[ModuleEnginesFX]:HAS[#engineID[CenterThree]]:NEEDS[!RealSolarSystem,TundraExploration]
 	{
-		@maxThrust = 2130
-	}
-	@MODULE[ModuleEnginesFX]:HAS[#engineID[CenterThree]]:NEEDS[RealSolarSystem,TundraExploration]
-	{
-		@maxThrust = 7020
+		@maxThrust = 2000
 	}
 
 	!EFFECTS:NEEDS[Waterfall] {}
@@ -308,9 +305,13 @@
 			scale = 1,1,2
 		}
 	}
-	DRAG_CUBE
+	DRAG_CUBE:NEEDS[!RealSolarSystem]
 	{
-		cube = Custom, 0.0,0.7408,3.143, 0.0,0.7408,3.143, 0.0,0.7324,2.014, 0.0,0.5312,1.731, 0.0,0.7418,3.143, 0.0,0.7417,3.143, -7.153E-07,-0.2241,2.384E-07, 6.062,1.923,6.062
+		cube = 0, 12, 0.75, 3, 12, 0.75, 3, 19.6, 0.3, 3, 22.5, 0.99, 0.3, 12, 0.8, 3, 12, 0.85, 3, 0, 0, 0, 5, 3.3, 5
+	}
+	DRAG_CUBE:NEEDS[RealSolarSystem]
+	{
+		cube = 0, 27, 0.65, 5, 27, 0.65, 5, 65, 0.3, 3, 65, 0.95, 0.3, 27, 0.65, 5, 27, 0.65, 5, 0, 0, 0, 9, 3.3, 9
 	}
 }
 
@@ -320,6 +321,10 @@
 {
 	@name = SEP_22_BOOSTER_CORE_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
+
+	@maximum_drag = 1
+	@minimum_drag = 0.3
+	@angularDrag = 0.5
 
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEP_Fuel]],* {}
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[SEPVentSwtich]],* {}
@@ -337,14 +342,14 @@
     RESOURCE:NEEDS[!RealSolarSystem]
     {
 		name = LiquidFuel
-        amount = 17000
-        maxAmount = 17000
+        amount = 16000
+        maxAmount = 16000
     }
     RESOURCE:NEEDS[!RealSolarSystem]
     {
 		name = Oxidizer
-        amount = 61200
-        maxAmount = 61200
+        amount = 57600
+        maxAmount = 57600
     }
 	RESOURCE:NEEDS[RealSolarSystem]
     {
@@ -358,6 +363,22 @@
         amount = 532174
         maxAmount = 532174
     }
+
+	@MODULE[ModuleEnginesFX]
+	{
+		@maxThrust = 10
+		-PROPELLANT,* {}
+		PROPELLANT
+		{
+			name = LiquidFuel
+			ratio = 1
+		}
+		PROPELLANT
+		{
+			name = Oxidizer
+			ratio = 3.6
+		}
+	}
 
     @MODULE[ModuleRCSFX]
 	{
@@ -384,11 +405,11 @@
 	}
 	@MODULE[ModuleRCSFX]:NEEDS[!RealSolarSystem]
 	{
-		@thrusterPower = 100
+		@thrusterPower = 75
 	}
 	@MODULE[ModuleRCSFX]:NEEDS[RealSolarSystem]
 	{
-		@thrusterPower = 1000
+		@thrusterPower = 400
 	}
 
 
@@ -478,11 +499,13 @@
 			scale = 1.6, 1.6, 1.6
 		}
 	}
-	DRAG_CUBE
+	DRAG_CUBE:NEEDS[!RealSolarSystem]
 	{
-		cube = 0, 244.7,0.7642,4.65, 244.7,0.7641,4.65, 122.68,0.7535,41.02, 139.68,0.876,21.54, 244.7,0.7642,4.65, 244.7,0.7642,4.65, 0,1.054,1.907E-06, 9.137,43.38,9.137
-		cube = 1, 244.7,0.7642,4.65, 244.7,0.7641,4.65, 122.68,0.7535,41.02, 156.68,0.876,21.54, 364.9,0.753,4.65, 266.2,0.7532,4.65, 0,1.054,1.907E-06, 9.137,43.38,9.137
-		cube = 2, 244.7,0.7642,4.65, 244.7,0.7641,4.65, 122.68,0.7535,41.02, 156.68,0.876,21.54, 364.9,0.753,4.65, 266.2,0.7532,4.65, 0,1.054,1.907E-06, 9.137,43.38,9.137
+		cube = 0, 206.5, 0.75, 2.5, 206.5, 0.75, 2.5, 19.6, 0.3, 60, 22.5, 0.99, 5.8, 206.5, 0.8, 2.5, 206.5, 0.85, 2.5, 0, 0, 0, 5, 41.3, 5
+	}
+	DRAG_CUBE:NEEDS[RealSolarSystem]
+	{
+		cube = 0, 540, 0.65, 4.5, 540, 0.65, 4.5, 65, 0.3, 60, 65, 0.95, 5.8, 540, 0.7, 4.5, 540, 0.75, 4.5, 0, 0, 0, 9, 65.8, 9
 	}
 }
 
@@ -493,11 +516,29 @@
 	@name = SEP_22_BOOSTER_GRIDFIN_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
 
-	DRAG_CUBE
+	@maximum_drag = 0.1
+	@minimum_drag = 0.05
+	@angularDrag = 0.1
+
+	@MODULE[ModuleControlSurface]:NEEDS[!RealSolarSystem]
 	{
-		cube = defaultRotation, 0.513,0.489,3.754, 0.513,0.8831,7.787, 1.952,0.7654,2.168, 48.957,0.4864,2.14, 13.85,0.9781,0.3265, 13.85,0.9737,0.3996, -0.2042,-0.9439,-0.006768, 7.711,2.193,0.3172
-		cube = fullDeflectionPos, 0.513,0.489,3.754, 0.513,0.8831,7.787, 1.952,0.7654,2.168, 48.957,0.4864,2.14, 13.85,0.9781,0.3265, 13.85,0.9737,0.3996, -0.2042,-0.9439,-0.006768, 7.711,2.193,0.3172
-		cube = fullDeflectionNeg, 0.513,0.489,3.754, 0.513,0.8831,7.787, 1.952,0.7654,2.168, 48.957,0.4864,2.14, 13.85,0.9781,0.3265, 13.85,0.9737,0.3996, -0.2042,-0.9439,-0.006768, 7.711,2.193,0.3172
+		@dragCoeff = 0.75
+		@deflectionLiftCoeff = 1.5
+	}
+
+	@MODULE[ModuleControlSurface]:NEEDS[RealSolarSystem]
+	{
+		@dragCoeff = 0.75
+		@deflectionLiftCoeff = 2.5
+	}
+
+	DRAG_CUBE:NEEDS[!RealSolarSystem]
+	{
+		cube = 0, 0.4, 0.85, 0.7, 0.4, 0.85, 0.7, 0.2, 0.65, 0.1, 0.2, 0.65, 0.1, 0.4, 0.85, 0.7, 0.4, 0.85, 0.7, 0, 0, 0, 2, 1.4, 0.2
+	}
+	DRAG_CUBE:NEEDS[RealSolarSystem]
+	{
+		cube = 0, 0.6, 0.85, 1, 0.6, 0.85, 1, 0.3, 0.65, 0.125, 0.3, 0.65, 0.125, 0.6, 0.85, 1, 0.6, 0.85, 1, 0, 0, 0, 3, 2, 0.25
 	}
 }
 
@@ -508,9 +549,15 @@
 	@name = SEP_22_BOOSTER_INTER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
 
-	DRAG_CUBE
+	@angularDrag = 0.5
+
+	DRAG_CUBE:NEEDS[!RealSolarSystem]
 	{
-		cube = Default, 12.8,0.8193,5.895, 12.8,0.8192,5.895, 4.79,0.9707,2.455, 37.79,0.983,2.36, 13.28,0.8261,5.209, 13.28,0.8263,5.209, 2.384E-07,0.07778,2.146E-06, 6.422,2.51,5.703
+		cube = 0, 12, 0.75, 3, 12, 0.75, 3, 19.6, 0.3, 3, 22.5, 0.99, 0.3, 12, 0.8, 3, 12, 0.85, 3, 0, 0, 0, 5, 3.3, 5
+	}
+	DRAG_CUBE:NEEDS[RealSolarSystem]
+	{
+		cube = 0, 27, 0.65, 1.85, 27, 0.65, 1.85, 65, 0.3, 3, 65, 0.65, 0.3, 27, 0.65, 1.85, 27, 0.65, 1.85, 0, 0, 0, 9, 3.3, 9
 	}
 }
 
@@ -553,11 +600,11 @@
 	}
 	@MODULE[ModuleEnginesFX]:NEEDS[RealSolarSystem]
 	{
-		@maxThrust = 2237
+		@maxThrust = 2340
 	}
 
 
-	!EFFECTS:NEEDS[Waterfall] {}
+	!EFFECTS:NEEDS[Waterfall],* {}
     EFFECTS:NEEDS[Waterfall]
     {
 		fx_draper
@@ -603,6 +650,7 @@
 			}
 		}
     }
+    !MODULE[ModuleWaterfallFX]:NEEDS[Waterfall],* {}
     MODULE:NEEDS[Waterfall]
     {
 		name = ModuleWaterfallFX
@@ -639,7 +687,7 @@
 			overrideParentTransform = ThrustTransform
 			position = 0,0,0
 			rotation = 0, 0, 0
-			scale = 2,2,2
+			scale = 2,2,4
 		}
     }
 }
@@ -684,12 +732,12 @@
 	}
 	@MODULE[ModuleEnginesFX]:NEEDS[RealSolarSystem]
 	{
-		@maxThrust = 2237
+		@maxThrust = 2340
 	}
 
 	-MODULE[ModuleB9PartSwitch]:HAS[#moduleID[plumeSwitch]],* {}
 
-	!EFFECTS:NEEDS[Waterfall] {}
+	!EFFECTS:NEEDS[Waterfall],* {}
     EFFECTS:NEEDS[Waterfall]
     {
         fx_nagata
@@ -735,6 +783,7 @@
 			}
         }
     }
+    !MODULE[ModuleWaterfallFX]:NEEDS[Waterfall],* {}
     MODULE:NEEDS[Waterfall]
     {
 		name = ModuleWaterfallFX
@@ -1139,26 +1188,26 @@
     RESOURCE:NEEDS[!RealSolarSystem]
     {
 		name = LiquidFuel
-        amount = 2500
-        maxAmount = 2500
+        amount = 3250
+        maxAmount = 3250
     }
     RESOURCE:NEEDS[!RealSolarSystem]
     {
 		name = Oxidizer
-        amount = 9000
-        maxAmount = 9000
+        amount = 11700
+        maxAmount = 11700
     }
     RESOURCE:NEEDS[RealSolarSystem]
     {
 		name = LiquidFuel
-        amount = 5000
-        maxAmount = 5000
+        amount = 6500
+        maxAmount = 6500
     }
     RESOURCE:NEEDS[RealSolarSystem]
     {
 		name = Oxidizer
-        amount = 18000
-        maxAmount = 18000
+        amount = 23400
+        maxAmount = 23400
     }
 
     @MODULE[ModuleEnginesFX]
@@ -1349,7 +1398,7 @@
 }
 @PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
-	@mass = 60
+	@mass = 69.2
 	@rescaleFactor = 1
 }
 
@@ -1361,7 +1410,7 @@
 }
 @PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
-	@mass = 120
+	@mass = 60
 	@rescaleFactor = 1
 }
 
@@ -1382,11 +1431,25 @@
 @PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 6
+
+	@MODULE[ModuleReactionWheel]
+	{
+		@PitchTorque = 150
+		@YawTorque = 150
+		@RollTorque = 500
+	}
 }
 @PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 8
 	@rescaleFactor = 1
+
+	@MODULE[ModuleReactionWheel]
+	{
+		@PitchTorque = 250
+		@YawTorque = 250
+		@RollTorque = 1500
+	}
 }
 
 
