--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -3,7 +3,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_CLUSTER]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_BOOSTER_CLUSTER]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_BOOSTER_CLUSTER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -317,7 +317,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_CORE]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_BOOSTER_CORE]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_BOOSTER_CORE_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -511,7 +511,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_GRIDFIN]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_BOOSTER_GRIDFIN]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_BOOSTER_GRIDFIN_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -544,7 +544,7 @@
 
 
 
-+PART[SEP_22_BOOSTER_INTER]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_BOOSTER_INTER]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_BOOSTER_INTER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -563,7 +563,7 @@
 
 
 
-+PART[SEP_22_RAPTOR_VAC]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_RAPTOR_VAC]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_RAPTOR_VAC_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -694,7 +694,7 @@
 
 
 
-+PART[SEP_22_RAPTOR2_SL_RC]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_RAPTOR2_SL_RC]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_RAPTOR2_SL_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -827,7 +827,7 @@
 
 
 
-+PART[SEP_22_SHIP_AFT_LEFT]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_AFT_LEFT]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_AFT_LEFT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -835,7 +835,7 @@
 
 
 
-+PART[SEP_22_SHIP_AFT_RIGHT]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_AFT_RIGHT]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_AFT_RIGHT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -843,7 +843,7 @@
 
 
 
-+PART[SEP_22_SHIP_BODY]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_BODY]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_BODY_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -977,7 +977,7 @@
 
 
 
-+PART[SEP_22_SHIP_CARGO]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_CARGO]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_CARGO_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1041,7 +1041,7 @@
 
 
 
-+PART[SEP_22_SHIP_CREW]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_CREW]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_CREW_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1105,7 +1105,7 @@
 
 
 
-+PART[SEP_22_SHIP_FWD_LEFT]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_FWD_LEFT]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_FWD_LEFT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1113,7 +1113,7 @@
 
 
 
-+PART[SEP_22_SHIP_FWD_RIGHT]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_FWD_RIGHT]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_FWD_RIGHT_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1121,7 +1121,7 @@
 
 
 
-+PART[SEP_22_SHIP_HEADER]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_HEADER]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_HEADER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1161,7 +1161,7 @@
 
 
 
-+PART[SEP_22_SHIP_TANKER]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
++PART[SEP_22_SHIP_TANKER]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipExpansionProject]
 {
 	@name = SEP_22_SHIP_TANKER_KOS
 	@manufacturer = Starship Expansion Project with KOS Guidance
@@ -1264,10 +1264,13 @@
 
 
 
-+PART[SLE_SS_OLM]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipLaunchExpansion]
++PART[SLE_SS_OLM]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLM_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
+
+	@maxTemp = 999999
+
 	MODULE
     {
         name = kOSProcessor
@@ -1288,7 +1291,7 @@
 
 
 
-+PART[SLE_SS_OLIT_Core]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipLaunchExpansion]
++PART[SLE_SS_OLIT_Core]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLIT_Core_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1296,7 +1299,7 @@
 
 
 
-+PART[SLE_SS_OLIT_Top]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipLaunchExpansion]
++PART[SLE_SS_OLIT_Top]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLIT_Top_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1304,7 +1307,7 @@
 
 
 
-+PART[SLE_SS_OLIT_Base]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipLaunchExpansion]
++PART[SLE_SS_OLIT_Base]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLIT_Base_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1312,7 +1315,7 @@
 
 
 
-+PART[SLE_SS_OLIT_MZ]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch]:AFTER[StarshipLaunchExpansion]
++PART[SLE_SS_OLIT_MZ]:NEEDS[kOS,!TweakableEverything]:AFTER[StarshipLaunchExpansion]
 {
 	@name = SLE_SS_OLIT_MZ_KOS
 	@manufacturer = Orbital Launch Mount with KOS Guidance
@@ -1320,7 +1323,7 @@
 
 
 
-@PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipLaunchExpansion]
+@PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipLaunchExpansion]
 {
 	@mass *= 4
 	%rescaleFactor = 1.6
@@ -1392,35 +1395,41 @@
 
 
 
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
-	@mass = 55
+	@mass = 45
 }
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
-	@mass = 69.2
+	@mass = 9.2
 	@rescaleFactor = 1
 }
 
 
 
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
-	@mass = 35
+	@mass = 45
+	@CoMOffset = 0, 0, 0
+	@CoMOffset = 0, 0, 0
+	@CoMOffset = 0, 0, 0
 }
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
-	@mass = 60
+	@mass = 120
 	@rescaleFactor = 1
+	@CoMOffset = 0, 0, 0
+	@CoMOffset = 0, 0, 0
+	@CoMOffset = 0, 0, 0
 }
 
 
 
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 3
 	@rescaleFactor = 1
@@ -1428,7 +1437,7 @@
 
 
 
-@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 6
 
@@ -1439,7 +1448,7 @@
 		@RollTorque = 500
 	}
 }
-@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 8
 	@rescaleFactor = 1
@@ -1454,11 +1463,11 @@
 
 
 
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -1466,11 +1475,11 @@
 
 
 
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 0.75
 }
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1.5
 	@rescaleFactor = 1
@@ -1478,11 +1487,11 @@
 
 
 
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1.25
 }
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 3.25
 	@rescaleFactor = 1
@@ -1490,11 +1499,11 @@
 
 
 
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 3
 	@rescaleFactor = 1
@@ -1502,12 +1511,12 @@
 
 
 
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 20
 	CoMOffset = 0.0, -1.5, 0.0
 }
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 75
 	CoMOffset = 0.0, -2.4, 0.0
@@ -1525,12 +1534,12 @@
 
 
 
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 10
 	CoMOffset = 0.0, -2, 0.0
 }
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 20
 	CoMOffset = 0.0, -3.2, 0.0
@@ -1548,12 +1557,12 @@
 
 
 
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 15
 	CoMOffset = 0.0, -2, 0.0
 }
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 25
 	%CoMOffset = 0.0, -3.2, 0.0
@@ -1571,12 +1580,12 @@
 
 
 
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 10
 	CoMOffset = 0.0, -2, 0.0
 }
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 20
 	CoMOffset = 0.0, -3.2, 0.0
@@ -1594,11 +1603,11 @@
 
 
 
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -1613,7 +1622,7 @@
 	%thermalMassModifier = 1.0
 }
 
-@INTERNAL[SEP_CREW_IVA_*]:NEEDS[kOS,!TweakableEverything,!FerramAerospaceResearch,RealSolarSystem]:AFTER[StarshipExpansionProject]
+@INTERNAL[SEP_CREW_IVA_*]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@rescaleFactor = 1
 	@scale = 1.6,1.6,1.6
@@ -1622,6 +1631,19 @@
 		@position[0,,] *= 1.6
 		@position[1,,] *= 1.6
 		@position[2,,] *= 1.6
+	}
+}
+
+
+@FARAeroStress:NEEDS[FerramAerospaceResearch]:AFTER[StarshipExpansionProject]
+{
+	@FARPartStressTemplate[structural]
+	{
+		@XZmaxStress = 200
+	}
+	@FARPartStressTemplate[rocketFuelTank]
+	{
+		@XZmaxStress = 200
 	}
 }
 
